# scope89_ptz

./: CMakeLists.txt  README.md  package.xml
config/: initial_positions.yaml  ptz_ros2_controllers.yaml  scope89_ptz.ros2_control.xacro
launch/: display.launch  gazebo.launch  ptz_standalone.launch.py
meshes/: Pan_Link.STL  Tilt_Link.STL  base_link.STL
urdf/: scope89_ptz.csv  scope89_ptz.urdf
urdf/scope89_ptz/configuration/: scope89_ptz_base.usd  scope89_ptz_robot.usd  scope89_ptz_sensor.usd
usd/scope89_ptz/: scope89_ptz.usd
usd/scope89_ptz/configuration/: scope89_ptz_base.usd  scope89_ptz_physics.usd
